--- a/doc.html
+++ b/doc.html
@@ -13,6 +13,7 @@
         github: "https://github.com/franziskuskiefer/webcrypto-ec",
       };
     </script>
+    <title>Web Cryptography EC API</title>
   </head>
   <body>
     <h1>Web Cryptograhpy EC API</h1>
