--- a/doc.html
+++ b/doc.html
@@ -294,7 +294,7 @@
           <li>
             <p>
               Let <var>publicKeyValue</var>
-              be the result of scalar-point multiplication operation <code>(xValue * GPint)</code>
+              be the result of scalar-point multiplication operation <code>(xValue * GPoint)</code>
               on the <var>namedCurve</var>.
             </p>
           </li>
