Fix markup mismatch

--- a/doc.html
+++ b/doc.html
@@ -116,7 +116,7 @@
             <p>
               Let <var>privateKeyValue</var>
               be an integer value with the result of the modulo operation
-              (<var>hValue</var> mod <var>nValue</var>)</code>.
+              (<var>hValue</var> mod <var>nValue</var>).
             </p>
           </li>
           <li>
