Use var instead of code for operation expression

--- a/doc.html
+++ b/doc.html
@@ -294,7 +294,7 @@
           <li>
             <p>
               Let <var>publicKeyValue</var>
-              be the result of scalar-point multiplication operation <code>(xValue * GPoint)</code>
+              be the result of scalar-point multiplication operation (<var>xValue</var> * <var>GPoint</var>)
               on the <var>namedCurve</var>.
             </p>
           </li>
@@ -483,7 +483,7 @@
           <li>
             <p>
               Let <var>publicKeyValue</var>
-              be the result of point-point add operation <code>(YPoint + MPoint)</code>
+              be the result of point-point add operation (<var>YPoint</var> + <var>MPoint</var>)
               on the <var>namedCurve</var>.
             </p>
           </li>
@@ -672,7 +672,7 @@
           <li>
             <p>
               Let <var>publicKeyValue</var>
-              be the result of point-point subtract operation <code>(YPoint - MPoint)</code>
+              be the result of point-point subtract operation (<var>YPoint</var> - <var>MPoint</var>)
               on the <var>namedCurve</var>.
             </p>
           </li>
