--- a/doc.html
+++ b/doc.html
@@ -175,7 +175,7 @@
           </li>
           <li>
             <p>
-              Resolve <var>promise</var> with <code>privateKey</code>.
+              Resolve <var>promise</var> with <var>privateKey</var>.
             </p>
           </li>
         </ol>
@@ -360,7 +360,7 @@
           </li>
           <li>
             <p>
-              Resolve <var>promise</var> with <code>publicKey</code>.
+              Resolve <var>promise</var> with <var>publicKey</var>.
             </p>
           </li>
         </ol>
@@ -549,7 +549,7 @@
           </li>
           <li>
             <p>
-              Resolve <var>promise</var> with <code>publicKey</code>.
+              Resolve <var>promise</var> with <var>publicKey</var>.
             </p>
           </li>
         </ol>
@@ -738,7 +738,7 @@
           </li>
           <li>
             <p>
-              Resolve <var>promise</var> with <code>publicKey</code>.
+              Resolve <var>promise</var> with <var>publicKey</var>.
             </p>
           </li>
         </ol>
